# personal-edge-ai-transition-plan

./: .gitignore  CMakeLists.txt  README.md
Daily_Code/Phase_01_ModernCpp/: CMakeLists.txt
Phase_01_NativeCppFoundation/: CMakeLists.txt
Phase_01_NativeCppFoundation/day01_SmartPtrAndRAII/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day02_RvalueAndMove/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day03_ThreadPool/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day04_MemoryPool/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day05_AsyncLogger/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day06_EventBus/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day07_DesignPatterns/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day08_ConfigAndSerialization/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day09_CMakeTargetsAndInstall/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day10_SharedLibStaticLibABI/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day11_ErrorHandlingAndExpected/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day12_PluginArchitecture/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day13_CrossPlatformFileSystem/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day14_Coroutine/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day15_LRUCache/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day16_VtableAndPolymorphism/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day17_MoveSemantics_Deep/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day18_ConceptsAndConstraints/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day19_RangesAndViews/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day20_AsyncIO_Epoll_Asio/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day21_CompileTimeCompute/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day22_SyncPrimitives/: CMakeLists.txt  main.cpp
Phase_01_NativeCppFoundation/day23_DebugAndSanitizers/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/: CMakeLists.txt
Phase_02_LinuxSystemAndNetworking/day01_EpollReactor/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day02_SharedMemory/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day03_TcpServer/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day04_HalfSyncHalfAsync/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day05_SystemdAndDaemon/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day06_DynamicLibraryAndLoader/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day07_ProcessSignalTimer/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day08_FileMappingAndZeroCopy/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day09_DebugToolchain/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day10_ProtocolDesign/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day11_ProtobufSerialization/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day12_TcpProtocolDeep/: CMakeLists.txt  main.cpp
Phase_02_LinuxSystemAndNetworking/day13_DeadlockDetection/: CMakeLists.txt  main.cpp
Phase_03_PerformanceAndDataPath/: CMakeLists.txt
Phase_03_PerformanceAndDataPath/day01_LockFreeQueue/: CMakeLists.txt  main.cpp
Phase_03_PerformanceAndDataPath/day02_MemoryAlignment/: CMakeLists.txt  main.cpp
Phase_03_PerformanceAndDataPath/day03_UnitTestAndDebug/: CMakeLists.txt  main.cpp
Phase_03_PerformanceAndDataPath/day04_BenchmarkAndPerf/: CMakeLists.txt  main.cpp
Phase_03_PerformanceAndDataPath/day05_FalseSharingAndCache/: CMakeLists.txt  main.cpp
Phase_03_PerformanceAndDataPath/day06_SIMDAndDataLayout/: CMakeLists.txt  main.cpp
Phase_03_PerformanceAndDataPath/day07_PipelineLatencyThroughput/: CMakeLists.txt  main.cpp
Phase_04_GeneralAIInference/: CMakeLists.txt
Phase_04_GeneralAIInference/day01_ONNX_Model_Inspect/: CMakeLists.txt  main.cpp
Phase_06_AdvancedTopics/: CMakeLists.txt
docs/: learning_plan.md  (+1 more)
(+52 files in other folders)
