# Phase 01: 原生 C++ 工程底座
add_subdirectory(day01_SmartPtrAndRAII)
add_subdirectory(day02_RvalueAndMove)
add_subdirectory(day03_ThreadPool)
add_subdirectory(day04_MemoryPool)
add_subdirectory(day05_AsyncLogger)
add_subdirectory(day06_EventBus)
add_subdirectory(day07_DesignPatterns)
add_subdirectory(day08_ConfigAndSerialization)
add_subdirectory(day09_CMakeTargetsAndInstall)
add_subdirectory(day10_SharedLibStaticLibABI)
add_subdirectory(day11_ErrorHandlingAndExpected)
add_subdirectory(day12_PluginArchitecture)
add_subdirectory(day13_CrossPlatformFileSystem)
add_subdirectory(day14_Coroutine)
add_subdirectory(day15_LRUCache)
add_subdirectory(day16_VtableAndPolymorphism)
add_subdirectory(day17_MoveSemantics_Deep)
add_subdirectory(day18_ConceptsAndConstraints)
add_subdirectory(day19_RangesAndViews)
add_subdirectory(day20_AsyncIO_Epoll_Asio)
add_subdirectory(day21_CompileTimeCompute)
add_subdirectory(day22_SyncPrimitives)
add_subdirectory(day23_DebugAndSanitizers)
